--- a/new.html
+++ b/new.html
@@ -51,7 +51,7 @@
 			}(document, 'script', 'twitter-wjs');
 
 			$(document).ready(function() {
-				$(emailtext).hide();
+				$("#emailtext").hide();
 				$("a.active").click(function() {
 					$(emailtext).toggle();
 				});
