index file modified

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<p class="mainpara">
 					For the souls in the grip of wanderlust, Ghoomakad offers a breathtaking experience in the Dhauladhar Himalayas
 					surrounding Dharamsala. Get touched by nature and feel the calming simplicity by living with the village families.
-					This experience also contributes towards the holistic sustenance of the village.
+					This experience also contributes towards the sustainable development of the village as a whole.
 				</p>
 				<div class="link">
 					<hr width="15%" />
@@ -82,7 +82,7 @@
 					<hr width="15%"/>
 				</div>
 				<div class="fb-like" data-href="http://www.ghoomakad.im" data-width="200" data-layout="button_count" data-show-faces="true" data-send="false"></div>
-				<!--<a href="https://twitter.com/share" class="twitter-share-button" data-url="www.ghoomakad.im" data-via="rajeshjoshi104"></a>-->
+				<!--<a href="https://twitter.com/share" class="twitter-share-button" data-url="www.ghoomakad" data-via="rajeshjoshi104"></a>-->
 				<a href="https://twitter.com/ghoomakad" class="twitter-follow-button" data-show-count="false"></a>
 			</div>
 			<div class="col-lg-3"></div>
