--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
 					<div class="row">
 						<div class="col-lg-12 col-sm-12 col-12">
 							<p>
-								For the souls in the grip o f wanderlust, Ghoomakad offers a breathtaking experience in the Dhauladhar Himalayas
-								surrounding Dharamsala. Get touched by nature and feel the serenity by living with simple village families.
-								This experience also contributes towards the sustainable development of the village as a whole.
+Ghoomakad offers village homestays and rural life experiences around Dharamsala in the lap of the Himalayas. Get touched by nature and form bonds with simple village families. Ghoomakad promotes cultural exchange and offers activities like farming, village walks, trekking and the majority of the proceeds are utilized for sustainable development of the villages.
 							</p>
 						</div>
 					</div>
