--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="css/bootstrap-glyphicons.css" media="screen" />
-		<link rel="stylesheet" href="css/index.css" type="text/css" />
-		<link rel="stylesheet" type="text/css" href="css/small-device.css" />
+		<!--link rel="stylesheet" href="css/index.css" type="text/css" />
+		<link rel="stylesheet" type="text/css" href="css/small-device.css"/-->
 
 		<!--<link rel="stylesheet" href="js/bootstrap.min.js" media="screen" />-->
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-
+		<link rel="stylesheet/less" href="less/index.less">
 		<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
 		<script src="js/jquery-1.9.js"></script>
-
+		<script src="js/less.js" type="text/javascript"></script>
 		<script>
 			/*	! function(d, s, id) {
 			 var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
@@ -67,7 +67,7 @@
 					<div class="row">
 						<div class="col-lg-12 col-sm-12 col-12">
 							<p>
-Ghoomakad offers village homestays and rural life experiences around Dharamsala in the lap of the Himalayas. Get touched by nature and form bonds with simple village families. Ghoomakad promotes cultural exchange and offers activities like farming, village walks, trekking and the majority of the proceeds are utilized for sustainable development of the villages.
+								Ghoomakad offers village homestays and rural life experiences around Dharamsala in the lap of the Himalayas. Get touched by nature and form bonds with simple village families. Ghoomakad promotes cultural exchange and offers activities like farming, village walks, trekking and the majority of the proceeds are utilized for sustainable development of the villages.
 							</p>
 						</div>
 					</div>
